tests/should_fail/let_destructure_list_on_tuple2.nv
module test
// let destructure: list pattern on a tuple (type mismatch)
let [a, b] = (1, 2)
